titulo del documento

--- a/prueba.html
+++ b/prueba.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Programacion Orientada a objetos con Javascript</title>
+  <title>Programacion Orientada a objetos con Javascript y css cintas </title>
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   <script>
    var dtInicio = new Date();
